{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 17,
  "lineage": "7a4d103a-b100-4ace-e850-237cd08a21ca",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "master_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/networkInterfaces/k8s-master-nic",
            "internal_domain_name_suffix": "ftbr3dvqslyurabdqgiqsmqmvg.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "master-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/publicIPAddresses/k8s-master-ip",
                "subnet_id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "k8s-master-nic",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "k8s-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.master_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/networkInterfaces/k8s-worker-nic-1",
            "internal_domain_name_suffix": "ftbr3dvqslyurabdqgiqsmqmvg.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "worker-ip-config-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "k8s-worker-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "k8s-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/networkInterfaces/k8s-worker-nic-2",
            "internal_domain_name_suffix": "ftbr3dvqslyurabdqgiqsmqmvg.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "worker-ip-config-2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "k8s-worker-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "k8s-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg",
            "location": "koreacentral",
            "name": "k8s-nsg",
            "resource_group_name": "k8s-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "k8s-nsg",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "k8s-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "30000-32767"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg/securityRules/allow-nodeport",
            "name": "allow-nodeport",
            "network_security_group_name": "k8s-nsg",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "k8s-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "k8s-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "k8s-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "master_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/publicIPAddresses/k8s-master-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.214.245.106",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "k8s-master-ip",
            "resource_group_name": "k8s-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet",
            "name": "k8s-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "k8s-rg",
            "virtual_network_name": "k8s-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8e1ec32c-92b0-48f1-8023-819109320cae",
            "id": "/subscriptions/e771e7f4-950c-4fc5-9735-8f75d5bda60c/resourceGroups/k8s-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet",
            "location": "koreacentral",
            "name": "k8s-vnet",
            "resource_group_name": "k8s-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}